# deception_detection

./: .gitignore  main.py  pyproject.toml  requirements.txt
colab/: train_on_colab.ipynb
paper/: Sehrawat_2023_Deception_Detection_BiLSTM_Complete_Reproduction.md
src/: config.py  train.py
src/models/: __init__.py  audio_branch.py  dummy_branches.py  fusion_model.py  sequence_branch.py  text_branch.py  video_branch.py
src/preprocessing/: __init__.py  aggregate.py  audio.py  dataset.py  extract_transcripts.py  fix_failed.py  loader.py  redo_text.py  run_all.py  text.py  video.py
tests/: test_models.py  test_preprocessing.py
