[project]
name = "bagoflies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
